antlr4/MLParser.ts
// Generated from antlr4/ML.g4 by ANTLR 4.7.3-SNAPSHOT


    // package com.syr.sml.parser;
    // import java.util.HashMap;


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { MLListener } from "./MLListener";
import { MLVisitor } from "./MLVisitor";


export class MLParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly T__55 = 56;
	public static readonly T__56 = 57;
	public static readonly T__57 = 58;
	public static readonly T__58 = 59;
	public static readonly COMMENT = 60;
	public static readonly RESERVED_WORD = 61;
	public static readonly ID = 62;
	public static readonly CON = 63;
	public static readonly VAR = 64;
	public static readonly LETTER = 65;
	public static readonly DIGIT = 66;
	public static readonly WS = 67;
	public static readonly RULE_longid = 0;
	public static readonly RULE_exp = 1;
	public static readonly RULE_exprow = 2;
	public static readonly RULE_match = 3;
	public static readonly RULE_lab = 4;
	public static readonly RULE_pat = 5;
	public static readonly RULE_patrow = 6;
	public static readonly RULE_typ = 7;
	public static readonly RULE_typrow = 8;
	public static readonly RULE_dec = 9;
	public static readonly RULE_valbind = 10;
	public static readonly RULE_funbind = 11;
	public static readonly RULE_funmatch = 12;
	public static readonly RULE_typbind = 13;
	public static readonly RULE_databind = 14;
	public static readonly RULE_conbind = 15;
	public static readonly RULE_exnbind = 16;
	public static readonly RULE_str = 17;
	public static readonly RULE_strbind = 18;
	public static readonly RULE_sig = 19;
	public static readonly RULE_typrefin = 20;
	public static readonly RULE_spec = 21;
	public static readonly RULE_valdesc = 22;
	public static readonly RULE_typdesc = 23;
	public static readonly RULE_datdesc = 24;
	public static readonly RULE_condesc = 25;
	public static readonly RULE_exndesc = 26;
	public static readonly RULE_strdesc = 27;
	public static readonly RULE_prog = 28;
	public static readonly RULE_fctbind = 29;
	public static readonly RULE_sigbind = 30;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"longid", "exp", "exprow", "match", "lab", "pat", "patrow", "typ", "typrow", 
		"dec", "valbind", "funbind", "funmatch", "typbind", "databind", "conbind", 
		"exnbind", "str", "strbind", "sig", "typrefin", "spec", "valdesc", "typdesc", 
		"datdesc", "condesc", "exndesc", "strdesc", "prog", "fctbind", "sigbind",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'.'", "'op'", "'#'", "'('", "')'", "','", "'{'", "'}'", "'['", 
		"']'", "';'", "'let'", "'in'", "'end'", "':'", "'raise'", "'handle'", 
		"'andalso'", "'orelse'", "'if'", "'then'", "'else'", "'while'", "'do'", 
		"'case'", "'of'", "'fn'", "'='", "'=>'", "'|'", "'_'", "'as'", "'...'", 
		"'*'", "'->'", "'val'", "'fun'", "'type'", "'datatype'", "'withtype'", 
		"'abstype'", "'with'", "'exception'", "'structure'", "'local'", "'open'", 
		"'nonfix'", "'infix'", "'and'", "'rec'", "'struct'", "':>'", "'sig'", 
		"'where'", "'eqtype'", "'include'", "'sharing'", "'functor'", "'signature'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "COMMENT", "RESERVED_WORD", 
		"ID", "CON", "VAR", "LETTER", "DIGIT", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(MLParser._LITERAL_NAMES, MLParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return MLParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "ML.g4"; }

	// @Override
	public get ruleNames(): string[] { return MLParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return MLParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(MLParser._ATN, this);
	}
	// @RuleVersion(0)
	public longid(): LongidContext {
		let _localctx: LongidContext = new LongidContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, MLParser.RULE_longid);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 62;
			this.match(MLParser.ID);
			this.state = 65;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 63;
					this.match(MLParser.T__0);
					this.state = 64;
					this.match(MLParser.ID);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 67;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 0, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public exp(): ExpContext;
	public exp(_p: number): ExpContext;
	// @RuleVersion(0)
	public exp(_p?: number): ExpContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExpContext = new ExpContext(this._ctx, _parentState);
		let _prevctx: ExpContext = _localctx;
		let _startState: number = 2;
		this.enterRecursionRule(_localctx, 2, MLParser.RULE_exp, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 152;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				{
				_localctx = new ValueOrConsExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 71;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === MLParser.T__1) {
					{
					this.state = 70;
					this.match(MLParser.T__1);
					}
				}

				this.state = 73;
				this.longid();
				}
				break;

			case 2:
				{
				_localctx = new IdentExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 74;
				this.match(MLParser.ID);
				}
				break;

			case 3:
				{
				_localctx = new ConstExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 75;
				this.match(MLParser.CON);
				}
				break;

			case 4:
				{
				_localctx = new RecordSelecExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 76;
				this.match(MLParser.T__2);
				this.state = 77;
				this.lab();
				}
				break;

			case 5:
				{
				_localctx = new ParenthesesExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 78;
				this.match(MLParser.T__3);
				this.state = 79;
				this.match(MLParser.T__4);
				}
				break;

			case 6:
				{
				_localctx = new TupleExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 80;
				this.match(MLParser.T__3);
				this.state = 81;
				this.exp(0);
				this.state = 86;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === MLParser.T__5) {
					{
					{
					this.state = 82;
					this.match(MLParser.T__5);
					this.state = 83;
					this.exp(0);
					}
					}
					this.state = 88;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 89;
				this.match(MLParser.T__4);
				}
				break;

			case 7:
				{
				_localctx = new RecordExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 91;
				this.match(MLParser.T__6);
				this.state = 93;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === MLParser.ID || _la === MLParser.CON) {
					{
					this.state = 92;
					this.exprow();
					}
				}

				this.state = 95;
				this.match(MLParser.T__7);
				}
				break;

			case 8:
				{
				_localctx = new ListExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 96;
				this.match(MLParser.T__8);
				this.state = 105;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << MLParser.T__1) | (1 << MLParser.T__2) | (1 << MLParser.T__3) | (1 << MLParser.T__6) | (1 << MLParser.T__8) | (1 << MLParser.T__11) | (1 << MLParser.T__15) | (1 << MLParser.T__19) | (1 << MLParser.T__22) | (1 << MLParser.T__24) | (1 << MLParser.T__26))) !== 0) || _la === MLParser.ID || _la === MLParser.CON) {
					{
					this.state = 97;
					this.exp(0);
					this.state = 102;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === MLParser.T__5) {
						{
						{
						this.state = 98;
						this.match(MLParser.T__5);
						this.state = 99;
						this.exp(0);
						}
						}
						this.state = 104;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
				}

				this.state = 107;
				this.match(MLParser.T__9);
				}
				break;

			case 9:
				{
				_localctx = new SeqExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 108;
				this.match(MLParser.T__3);
				this.state = 109;
				this.exp(0);
				this.state = 112;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 110;
					this.match(MLParser.T__10);
					this.state = 111;
					this.exp(0);
					}
					}
					this.state = 114;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la === MLParser.T__10);
				this.state = 116;
				this.match(MLParser.T__4);
				}
				break;

			case 10:
				{
				_localctx = new LocalDecExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 118;
				this.match(MLParser.T__11);
				this.state = 119;
				this.dec(0);
				this.state = 120;
				this.match(MLParser.T__12);
				this.state = 121;
				this.exp(0);
				this.state = 126;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === MLParser.T__10) {
					{
					{
					this.state = 122;
					this.match(MLParser.T__10);
					this.state = 123;
					this.exp(0);
					}
					}
					this.state = 128;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 129;
				this.match(MLParser.T__13);
				}
				break;

			case 11:
				{
				_localctx = new ExnRaisingExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 131;
				this.match(MLParser.T__15);
				this.state = 132;
				this.exp(8);
				}
				break;

			case 12:
				{
				_localctx = new CondExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 133;
				this.match(MLParser.T__19);
				this.state = 134;
				this.exp(0);
				this.state = 135;
				this.match(MLParser.T__20);
				this.state = 136;
				this.exp(0);
				this.state = 137;
				this.match(MLParser.T__21);
				this.state = 138;
				this.exp(4);
				}
				break;

			case 13:
				{
				_localctx = new IterExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 140;
				this.match(MLParser.T__22);
				this.state = 141;
				this.exp(0);
				this.state = 142;
				this.match(MLParser.T__23);
				this.state = 143;
				this.exp(3);
				}
				break;

			case 14:
				{
				_localctx = new CaseAnalysisExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 145;
				this.match(MLParser.T__24);
				this.state = 146;
				this.exp(0);
				this.state = 147;
				this.match(MLParser.T__25);
				this.state = 148;
				this.match();
				}
				break;

			case 15:
				{
				_localctx = new FuncExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 150;
				this.match(MLParser.T__26);
				this.state = 151;
				this.match();
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 173;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 171;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
					case 1:
						{
						_localctx = new InfixAppExpContext(new ExpContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, MLParser.RULE_exp);
						this.state = 154;
						if (!(this.precpred(this._ctx, 11))) {
							throw new FailedPredicateException(this, "this.precpred(this._ctx, 11)");
						}
						this.state = 155;
						this.match(MLParser.ID);
						this.state = 156;
						this.exp(12);
						}
						break;

					case 2:
						{
						_localctx = new AppExpContext(new ExpContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, MLParser.RULE_exp);
						this.state = 157;
						if (!(this.precpred(this._ctx, 10))) {
							throw new FailedPredicateException(this, "this.precpred(this._ctx, 10)");
						}
						this.state = 158;
						this.exp(11);
						}
						break;

					case 3:
						{
						_localctx = new ConjExpContext(new ExpContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, MLParser.RULE_exp);
						this.state = 159;
						if (!(this.precpred(this._ctx, 6))) {
							throw new FailedPredicateException(this, "this.precpred(this._ctx, 6)");
						}
						this.state = 160;
						this.match(MLParser.T__17);
						this.state = 161;
						this.exp(7);
						}
						break;

					case 4:
						{
						_localctx = new DisjExpContext(new ExpContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, MLParser.RULE_exp);
						this.state = 162;
						if (!(this.precpred(this._ctx, 5))) {
							throw new FailedPredicateException(this, "this.precpred(this._ctx, 5)");
						}
						this.state = 163;
						this.match(MLParser.T__18);
						this.state = 164;
						this.exp(6);
						}
						break;

					case 5:
						{
						_localctx = new TypeAnnoExpContext(new ExpContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, MLParser.RULE_exp);
						this.state = 165;
						if (!(this.precpred(this._ctx, 9))) {
							throw new FailedPredicateException(this, "this.precpred(this._ctx, 9)");
						}
						this.state = 166;
						this.match(MLParser.T__14);
						this.state = 167;
						this.typ(0);
						}
						break;

					case 6:
						{
						_localctx = new ExnHandlingExpContext(new ExpContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, MLParser.RULE_exp);
						this.state = 168;
						if (!(this.precpred(this._ctx, 7))) {
							throw new FailedPredicateException(this, "this.precpred(this._ctx, 7)");
						}
						this.state = 169;
						this.match(MLParser.T__16);
						this.state = 170;
						this.match();
						}
						break;
					}
					}
				}
				this.state = 175;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public exprow(): ExprowContext {
		let _localctx: ExprowContext = new ExprowContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, MLParser.RULE_exprow);
		let _la: number;
		try {
			_localctx = new ExpRowContext(_localctx);
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 176;
			this.lab();
			this.state = 177;
			this.match(MLParser.T__27);
			this.state = 178;
			this.exp(0);
			this.state = 181;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MLParser.T__5) {
				{
				this.state = 179;
				this.match(MLParser.T__5);
				this.state = 180;
				this.exprow();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public match(): MatchContext {
		let _localctx: MatchContext = new MatchContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, MLParser.RULE_match);
		try {
			_localctx = new MatchBodyContext(_localctx);
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 183;
			this.pat(0);
			this.state = 184;
			this.match(MLParser.T__28);
			this.state = 185;
			this.exp(0);
			this.state = 188;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				{
				this.state = 186;
				this.match(MLParser.T__29);
				this.state = 187;
				this.match();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public lab(): LabContext {
		let _localctx: LabContext = new LabContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, MLParser.RULE_lab);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 190;
			_la = this._input.LA(1);
			if (!(_la === MLParser.ID || _la === MLParser.CON)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public pat(): PatContext;
	public pat(_p: number): PatContext;
	// @RuleVersion(0)
	public pat(_p?: number): PatContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: PatContext = new PatContext(this._ctx, _parentState);
		let _prevctx: PatContext = _localctx;
		let _startState: number = 10;
		this.enterRecursionRule(_localctx, 10, MLParser.RULE_pat, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 247;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 20, this._ctx) ) {
			case 1:
				{
				_localctx = new ConstPatContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 193;
				this.match(MLParser.CON);
				}
				break;
